[build-dependencies]
[build-dependencies.qt_build_tools]
path = "/Users/lanfan/projects/rust-projects/cpp_to_rust/qt_generator/qt_build_tools"
version = "0.2.3"

[dependencies]
libc = "0.2"

[dependencies.cpp_utils]
path = "/Users/lanfan/projects/rust-projects/cpp_to_rust/cpp_to_rust/cpp_utils"
version = "0.2.0"

[dependencies.qt_core]
path = "/Users/lanfan/projects/rust-projects/qt_generator-output/qt_core"
version = "0.2.3"

[dependencies.qt_gui]
path = "/Users/lanfan/projects/rust-projects/qt_generator-output/qt_gui"
version = "0.2.3"

[dependencies.qt_widgets]
path = "/Users/lanfan/projects/rust-projects/qt_generator-output/qt_widgets"
version = "0.2.3"

[package]
authors = ["Pavel Strakhov <ri@idzaaus.org>"]
build = "build.rs"
description = "Bindings for QtUiTools C++ library (generated automatically with cpp_to_rust project)"
documentation = "https://rust-qt.github.io/rustdoc/qt/qt_ui_tools"
license = "MIT"
name = "qt_ui_tools"
repository = "https://github.com/rust-qt/cpp_to_rust"
version = "0.2.3"
